[package]
name = "rust-mandelbrot"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["from"] }
log = "0.4.22"
pixels = "0.14.0"
simple_logger = { version = "5.0.0", default-features = false, features = ["stderr", "colors"] }
winit = { version = "0.30.7", features = ["rwh_05"] }
